test/files/neg/t4536b.scala
import language.dynamics

class DynamicClass extends Dynamic {
  def applyDynamic(m: String)() = ()
  nonExistingMethod()
  this.nonExistingMethod()
}
